shell-search-provider: do not search for whole words only

Starting from 3.20 the shell search works only for whole words, not
prefixes. Make it work again.

https://bugzilla.gnome.org/show_bug.cgi?id=764587